--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             
                 <a href="tel:+916268962363">Call Us</a>
            
-                <a href="https:www.linkedin.com/in/deep-sandilya-097662323" target="_blank">Linkedin</a>
+                <a href="https://linkedin.com/in/deep-sandilya-097662323" target="_blank">Linkedin</a>
 
                 <a href="https://github.com//deepsandilya01" target="_blank">GitHub</a>
 
