--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                 <i>Portfolio website - A personal site with HTML and CSS</i>
             </div>
             <div class="education01">
-                <a style="text-decoration: none; color: inherit;" href="https://deepsandilya01.github.io/youtube/" target="_blank" ><i>DF - YouTube</i></a>
+                <a style="text-decoration: none; color: inherit;" href="https://deepsandilya01.github.io/youtube/"
+                    target="_blank"><i>DF - YouTube</i></a>
             </div>
             <div class="education01">
                 <i>Game 1 (Snake , Water , Gun) using Python</i>
@@ -104,15 +105,18 @@
             <br>
             <div class="contact-box">
                 <a href="mailto:deepsandilya23@gmail.com">Send Gmail</a>
-            
+
                 <a href="tel:+916268962363">Call Us</a>
-           
+
                 <a href="https://linkedin.com/in/deep-sandilya-097662323" target="_blank">Linkedin</a>
 
                 <a href="https://github.com//deepsandilya01" target="_blank">GitHub</a>
 
                 <a href="https://instagram.com//deepsandilya_01" target="_blank">Instagram</a>
             </div>
+        </div>
+        <div class="footer">
+            <p>© 2025 MY RESUME WEBSITE</p>
         </div>
     </div>
 </body>
