all error clear

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume website</title>
-    <link rel="shortcut icon" href="./deep.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./deep.webp" type="image/x-icon">
     <meta name="description" contant="hey guys kya hall chal">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="contract">
-            <h3 style="font-size: 30px; font-weight: 500;"><b>CONTRACT ME</b></h3>
+            <h3 style="font-size: 30px; font-weight: 500;"><b>CONTACT ME</b></h3>
             <br>
             <div class="contact-box">
                 <a href="mailto:deepsandilya23@gmail.com">Send Gmail</a>
