--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <br>
             <img class="dp" height="70" src="./deep.webp" alt="image not found">
             <h1>DEEP SANDILYA</h1>
-            <p class="info">WEB DEVELOPER | PROGRAMMER | DESIOGNER | LEARNER</p>
+            <p class="info">WEB DEVELOPER | PROGRAMMER | DESIGNER | LEARNER</p>
             <br>
         </div>
         <br><br>
